# rustbucks

./: Cargo.toml  Pipfile  README.md  dev-config.toml  production.ini  pytest.ini  run.sh
.circleci/: config.yml
app/: Cargo.toml
app/src/: barista.rs  base.html  config.rs  documents.rs  drinker.rs  ids.rs  lib.rs  menu.rs  persistence.rs  persistence.sql  product.rs  services.rs  template.html  templates.rs  tests.rs  untyped_ids.rs
app/src/menu/: coffee.html  drink.html  menu.html  mod.rs  models.rs  resources.rs
app/src/orders/: mod.rs  models.rs  order-list.html  order.html  resources.rs
app/src/test/: junk_drawer.rs  mod.rs
app/tests/: tests.rs
design-helper/: .coveragerc  MANIFEST.in  README.txt  development.ini  setup.py
design-helper/temple_plates/: tests.py
design-helper/temple_plates/static/: theme.css
design-helper/temple_plates/templates/: layout.jinja2  menu.jinja2
infra/: Cargo.toml
infra/src/: documents.rs  ids.rs  persistence.rs  persistence.sql  untyped_ids.rs
src/: base.html  lib.rs  main.rs  template.html
temple_plates/: __init__.py  views.py
temple_plates/templates/: drink.jinja2  layout.jinja2  menu.jinja2  order.jinja2
vlq/: Cargo.toml
vlq/benches/: bench.rs
vlq/src/: lib.rs
