[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
name = "rustbucks"
version = "0.1.0"
edition = "2018"
default-run = "rb"

[dependencies]
env_logger = "0.7.1"
envy = "0.4.0"
hex-slice = "0.1.4"
log = "0.4.10"
maplit = "1.0.2"
r2d2 = "0.8.7"
r2d2_postgres = "0.14.0"
rand = "0.7.2"
serde = {version="1.0.103", features=["derive"]}
serde_json = "1.0.44"
structopt = "0.3.5"
toml = "0.5.5"
url = "2.1.0"
time = "0.1.42"
jemallocator-global = "0.3.2"
infra = { path = "../infra" }
chrono = "0.4.10"
anyhow = "1.0.25"
err-derive = "0.2.1"
fallible-iterator = "0.1.6"

[dev-dependencies]
serde_json = "1.0.44"
lazy_static = "1.4.0"

