[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
name = "rustbucks"
version = "0.1.0"
edition = "2018"
default-run = "rb"

[dependencies]
env_logger = "0.7.1"
envy = "0.4.1"
hex-slice = "0.1.4"
log = "0.4.8"
maplit = "1.0.2"
r2d2 = "0.8.8"
r2d2_postgres = "0.14.0"
rand = "0.7.3"
serde = {version="1.0.106", features=["derive"]}
serde_json = "1.0.50"
structopt = "0.3.12"
toml = "0.5.6"
url = "2.1.1"
time = "0.2.9"
jemallocator-global = "0.3.2"
infra = { path = "../infra" }
chrono = "0.4.11"
anyhow = "1.0.28"
err-derive = "0.2.3"
fallible-iterator = "0.1.6"

[dev-dependencies]
serde_json = "1.0.50"
lazy_static = "1.4.0"

