[package]
name = "infra"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siphasher = "0.3.1"
data-encoding = "2.1.2"
rand = "0.7.3"
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0.45"
log = "0.4.8"
r2d2_postgres = "0.14.0"
r2d2 = "0.8.8"
anyhow = "1.0.25"
err-derive = "0.2.2"
fallible-iterator = "0.1.6"

[dependencies.postgres]
features = ["with-serde_json"]
version = "0.15.2"

[dev-dependencies]
env_logger = "0.7.1"
lazy_static = "1.4.0"
